Fixed some issues and added lemmatizer for better matching

--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 100,
    "id": "de6515cb",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "True"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,15 +38,17 @@
     "from PIL import Image\n",
     "import pandas as pd\n",
     "import networkx as nx\n",
+    "from nltk.stem import WordNetLemmatizer\n",
     "\n",
     "import torchvision.transforms as transforms\n",
     "import torch\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torch.nn.utils.rnn import pad_sequence\n",
-    "\n",
     "from huggingface_hub import hf_hub_download\n",
     "\n",
-    "nltk.download('punkt_tab', quiet=True)"
+    "nltk.download('punkt_tab', quiet=True)\n",
+    "nltk.download('wordnet', quiet=True)\n",
+    "nltk.download('omw-1.4', quiet=True)"
    ]
   },
   {
@@ -67,10 +69,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "id": "b1f6e438",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cuda\n"
+     ]
+    }
+   ],
    "source": [
     "IMG_SIZE = (224, 224)\n",
     "VOCAB_SIZE = 5000\n",
@@ -79,10 +89,10 @@
     "\n",
     "# Directory Information\n",
     "DATA_DIR = \"data/\"\n",
-    "ORIGINAL_DIR = os.path.join(DATA_DIR, 'original/')\n",
-    "ORIGINAL_IMAGE_PATH = os.path.join(ORIGINAL_DIR, 'imgs/')\n",
-    "ORIGINAL_KG_PATH = os.path.join(ORIGINAL_DIR, 'KG/')\n",
-    "ORIGINAL_VOCABS_PATH = os.path.join(ORIGINAL_DIR, 'vocabs/')\n",
+    "DATASET_PATH = os.path.join(DATA_DIR, 'dataset/')\n",
+    "IMAGE_PATH = os.path.join(DATA_DIR, 'imgs/')\n",
+    "KG_PATH = os.path.join(DATA_DIR, 'KG/')\n",
+    "VOCABS_PATH = os.path.join(DATA_DIR, 'vocabs/')\n",
     "\n",
     "# Huggingface Repository Information\n",
     "repo_id = \"BoKelvin/SLAKE\"\n",
@@ -92,7 +102,10 @@
     "\n",
     "# Entity Extraction\n",
     "MAX_PHRASE_LENGTH = 5 # Look up to 5-grams for entity matching\n",
-    "GRAPH_NODES = set()"
+    "\n",
+    "# Device\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "print(f\"Using device: {device}\")"
    ]
   },
   {
@@ -113,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "id": "55169c57",
    "metadata": {},
    "outputs": [],
@@ -144,34 +157,44 @@
     "    except Exception as e:\n",
     "        print(f\"Failed to download or extract {filename}: {e}\")\n",
     "\n",
+    "# Scoping to English only\n",
+    "def filter_language(original):\n",
+    "    return original.filter(lambda data: data['q_lang'] == 'en')\n",
+    "\n",
     "# Download and store the dataset\n",
-    "def download_and_store_dataset():\n",
+    "def download_and_store_english_dataset():\n",
     "    print(f\"Downloading dataset from {repo_id} repo\")\n",
     "\n",
     "    # Load from Hugging Face\n",
     "    original = load_dataset(repo_id)\n",
     "\n",
+    "    # Scope to English Only\n",
+    "    original = filter_language(original)\n",
+    "\n",
     "    # Show the dataset formatting\n",
     "    pprint(original)\n",
     "\n",
     "    # Save the original dataset\n",
-    "    if not os.path.exists(ORIGINAL_DIR):\n",
-    "        os.makedirs(ORIGINAL_DIR)\n",
+    "    if not os.path.exists(DATA_DIR):\n",
+    "        os.makedirs(DATA_DIR)\n",
     "\n",
-    "    original.save_to_disk(ORIGINAL_DIR)\n",
+    "    if not os.path.exists(DATASET_PATH):\n",
+    "        os.makedirs(DATASET_PATH)\n",
+    "\n",
+    "    original.save_to_disk(DATASET_PATH)\n",
     "    return original\n",
     "\n",
     "# Download and store the Knowledge Graph files\n",
     "def download_and_store_KG():\n",
-    "    download_and_store_ZIP(kg_file, ORIGINAL_DIR)\n",
+    "    download_and_store_ZIP(kg_file, DATA_DIR)\n",
     "\n",
     "# Download and store the image files\n",
     "def download_and_store_image():\n",
-    "    download_and_store_ZIP(img_file, ORIGINAL_DIR)\n",
+    "    download_and_store_ZIP(img_file, DATA_DIR)\n",
     "\n",
     "# Download necessary files\n",
     "def download_and_store_slake():\n",
-    "    dataset = download_and_store_dataset()\n",
+    "    dataset = download_and_store_english_dataset()\n",
     "    download_and_store_image()\n",
     "    download_and_store_KG()\n",
     "\n",
@@ -188,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 97,
    "id": "14506466",
    "metadata": {},
    "outputs": [],
@@ -208,9 +231,11 @@
     "\n",
     "    for file_path in csv_files:\n",
     "        filename = os.path.basename(file_path)\n",
+    "        print(f\"Processing {file_path}\")\n",
     "\n",
     "        try:\n",
     "            df = pd.read_csv(file_path, dtype=str, delimiter='#')\n",
+    "            print(f\"Total relations in {filename}: {df.size}\")\n",
     "\n",
     "            if len(df.columns) < 3:\n",
     "                print(f\"Error with {filename}: Expected 3 columns, found {len(df.columns)}\")\n",
@@ -219,34 +244,29 @@
     "            df.columns = ['head', 'relation', 'tail'] + list(df.columns[3:])\n",
     "\n",
     "            # Add edges for the graph\n",
-    "            edges = []\n",
     "            for _, row in df.iterrows():\n",
     "                u = row['head'].strip().lower()\n",
     "                rel = row['relation'].strip().lower()\n",
     "                v = row['tail'].strip().lower()\n",
     "\n",
     "                # Add to edge list\n",
-    "                edges.append((u, v, {'relation': rel, 'source_file': filename}))\n",
+    "                G.add_edge(u, v, relation=rel)\n",
     "\n",
-    "            G.add_edges_from(edges)\n",
+    "            # G.add_edges_from(edges)\n",
     "\n",
     "        except Exception as e:\n",
     "            print(f\"Error reading {filename}: {e}\")\n",
     "\n",
-    "        print(f\"\\nGraph Built Successfully!\")\n",
-    "        print(f\"Nodes: {G.number_of_nodes()}\")\n",
-    "        print(f\"Edges: {G.number_of_edges()}\")\n",
+    "    print(f\"\\nGraph Built Successfully!\")\n",
+    "    print(f\"Nodes: {G.number_of_nodes()}\")\n",
+    "    print(f\"Edges: {G.number_of_edges()}\")\n",
     "\n",
-    "        # Save as pickle for fast load\n",
-    "        if not os.path.exists(ORIGINAL_KG_PATH):\n",
-    "            os.makedirs(ORIGINAL_KG_PATH)\n",
+    "    # Save as pickle for fast load\n",
+    "    if not os.path.exists(KG_PATH):\n",
+    "        os.makedirs(KG_PATH)\n",
     "\n",
-    "        pickle.dump(G, open(os.path.join(ORIGINAL_KG_PATH, 'slake_kg.pickle'), 'wb'))\n",
-    "\n",
-    "        # Create the GRAPH_NODES set, make it case insensitive\n",
-    "        global GRAPH_NODES\n",
-    "        GRAPH_NODES = set(node.lower() for node in G.nodes)\n",
-    "        return G"
+    "    pickle.dump(G, open(os.path.join(KG_PATH, 'slake_kg.pickle'), 'wb'))\n",
+    "    return G"
    ]
   },
   {
@@ -259,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "id": "0cf5248b",
    "metadata": {},
    "outputs": [],
@@ -312,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "id": "1de11da3",
    "metadata": {},
    "outputs": [],
@@ -334,15 +354,15 @@
     "\n",
     "# Save vocabularies to JSON files\n",
     "def save_vocabs(quest_vocab, ans_vocab):\n",
-    "    if not os.path.exists(ORIGINAL_VOCABS_PATH):\n",
-    "        os.makedirs(ORIGINAL_VOCABS_PATH)\n",
+    "    if not os.path.exists(VOCABS_PATH):\n",
+    "        os.makedirs(VOCABS_PATH)\n",
     "\n",
     "    # Save Question Vocabulary\n",
-    "    with open(os.path.join(ORIGINAL_VOCABS_PATH, 'question_vocab.json'), 'w') as f:\n",
+    "    with open(os.path.join(VOCABS_PATH, 'question_vocab.json'), 'w') as f:\n",
     "        json.dump({'stoi': quest_vocab.stoi, 'itos': quest_vocab.itos}, f)\n",
     "\n",
     "    # Save Answer Vocabulary\n",
-    "    with open(os.path.join(ORIGINAL_VOCABS_PATH, 'answer_vocab.json'), 'w') as f:\n",
+    "    with open(os.path.join(VOCABS_PATH, 'answer_vocab.json'), 'w') as f:\n",
     "        json.dump({'stoi': ans_vocab.stoi, 'itos': ans_vocab.itos}, f)\n",
     "\n",
     "    print(\"Vocabularies saved successfully.\")\n",
@@ -366,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 101,
    "id": "c9065769",
    "metadata": {},
    "outputs": [],
@@ -387,6 +407,9 @@
     "        return len(self.data)\n",
     "    \n",
     "    def extract_entities(self, text):\n",
+    "        # Initialize Lemmatizer\n",
+    "        lemmatizer = WordNetLemmatizer()\n",
+    "\n",
     "        tokens = nltk.word_tokenize(text.lower())\n",
     "        extracted_entities = []\n",
     "\n",
@@ -396,13 +419,27 @@
     "            # Check for n-grams from MAX_PHRASE_LENGTH down to 1\n",
     "            for length in range(MAX_PHRASE_LENGTH, 0, -1):\n",
     "                if i + length <= len(tokens):\n",
-    "                    phrase = ' '.join(tokens[i:i+length])\n",
+    "                    phrase_tokens = tokens[i:i+length]\n",
+    "\n",
+    "                    # Strategy 1: Exact Match\n",
+    "                    phrase = ' '.join(phrase_tokens)\n",
     "                    if phrase in self.graph_nodes:\n",
     "                        index = self.node_to_index.get(phrase, None)\n",
     "                        extracted_entities.append(index)\n",
     "                        i += length\n",
     "                        match_found = True\n",
     "                        break\n",
+    "\n",
+    "                    # Strategy 2: Lemmatized Match (For singular/plural issues)\n",
+    "                    phrase_lemma_tokens = [lemmatizer.lemmatize(token, pos='n') for token in phrase_tokens]\n",
+    "                    phrase_lemma_str = \" \".join(phrase_lemma_tokens)\n",
+    "                    if phrase_lemma_str in self.graph_nodes:\n",
+    "                        index = self.node_to_index.get(phrase_lemma_str, None)\n",
+    "                        extracted_entities.append(index)\n",
+    "                        i += length\n",
+    "                        match_found = True\n",
+    "                        break\n",
+    "\n",
     "            if not match_found:\n",
     "                i += 1\n",
     "\n",
@@ -413,7 +450,7 @@
     "\n",
     "        # 1. Image Processing\n",
     "        image_path = item['img_name']\n",
-    "        image_path = os.path.join(ORIGINAL_IMAGE_PATH, image_path)\n",
+    "        image_path = os.path.join(IMAGE_PATH, image_path)\n",
     "        image = Image.open(image_path).convert(\"RGB\")\n",
     "\n",
     "        if self.transform:\n",
@@ -455,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "id": "7a187526",
    "metadata": {},
    "outputs": [],
@@ -499,12 +536,15 @@
    "outputs": [],
    "source": [
     "# Testing Purpose\n",
-    "def test_pipelines():\n",
-    "    # Download and store the dataset\n",
-    "    dataset = download_and_store_slake()\n",
+    "def test_pipelines(need_download=True):\n",
+    "    if need_download:\n",
+    "        # Download and store the dataset\n",
+    "        dataset = download_and_store_slake()\n",
+    "    else:\n",
+    "        dataset = load_from_disk(DATASET_PATH)\n",
     "\n",
     "    # Build the knowledge graph\n",
-    "    kg = build_slake_knowledge_graph(ORIGINAL_KG_PATH)\n",
+    "    kg = build_slake_knowledge_graph(KG_PATH)\n",
     "\n",
     "    # Build vocabularies\n",
     "    train_data = dataset['train']\n",
@@ -536,16 +576,24 @@
     "\n",
     "    # Test the loader\n",
     "    for batch in train_loader:\n",
+    "        print(\"Batch Size:\", train_loader.batch_size)\n",
     "        print(\"Images shape:\", batch['image'].shape)     # (32, 3, 224, 224)\n",
     "        print(\"Questions shape:\", batch['question'].shape) # (32, max_q_len)\n",
     "        print(\"Answer shape:\", batch['answer'].shape) # (32, max_q_len)\n",
     "        print(\"KG Nodes shape:\", batch['kg_index'].shape)   # (32, max_nodes_len)\n",
+    "\n",
+    "        # Specific data\n",
+    "        print(\"Question: \", batch['original_questions'][0])\n",
+    "        print(\"Tokenized Question: \", batch['question'][0])\n",
+    "        print(\"Answer: \", batch['original_answers'][0])\n",
+    "        print(\"Tokenized Answer: \", batch['answer'][0])\n",
+    "        print(\"KG Nodes: \", batch['kg_index'][0])\n",
     "        break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 115,
    "id": "4ee7c928",
    "metadata": {},
    "outputs": [
@@ -553,82 +601,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading dataset from BoKelvin/SLAKE repo\n",
-      "DatasetDict({\n",
-      "    train: Dataset({\n",
-      "        features: ['img_name', 'location', 'answer', 'modality', 'base_type', 'answer_type', 'question', 'qid', 'content_type', 'triple', 'img_id', 'q_lang'],\n",
-      "        num_rows: 9835\n",
-      "    })\n",
-      "    validation: Dataset({\n",
-      "        features: ['img_name', 'location', 'answer', 'modality', 'base_type', 'answer_type', 'question', 'qid', 'content_type', 'triple', 'img_id', 'q_lang'],\n",
-      "        num_rows: 2099\n",
-      "    })\n",
-      "    test: Dataset({\n",
-      "        features: ['img_name', 'location', 'answer', 'modality', 'base_type', 'answer_type', 'question', 'qid', 'content_type', 'triple', 'img_id', 'q_lang'],\n",
-      "        num_rows: 2094\n",
-      "    })\n",
-      "})\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Saving the dataset (1/1 shards): 100%|██████████| 9835/9835 [00:00<00:00, 728481.26 examples/s]\n",
-      "Saving the dataset (1/1 shards): 100%|██████████| 2099/2099 [00:00<00:00, 305551.11 examples/s]\n",
-      "Saving the dataset (1/1 shards): 100%|██████████| 2094/2094 [00:00<00:00, 340395.03 examples/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching file imgs.zip from BoKelvin/SLAKE repo\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "imgs.zip download complete. Cached at: C:\\Users\\User\\.cache\\huggingface\\hub\\datasets--BoKelvin--SLAKE\\snapshots\\a9083ce6c34ac3ffb17671a605962924d8a8f9e9\\imgs.zip\n",
-      "Extracting to data/original/...\n",
-      "Extraction complete.\n",
-      "imgs.zip files are located in: c:\\Users\\User\\Documents\\WOA7015 - Advanced ML\\Assignments\\AA\\data\\original\n",
-      "Fetching file KG.zip from BoKelvin/SLAKE repo\n",
-      "KG.zip download complete. Cached at: C:\\Users\\User\\.cache\\huggingface\\hub\\datasets--BoKelvin--SLAKE\\snapshots\\a9083ce6c34ac3ffb17671a605962924d8a8f9e9\\KG.zip\n",
-      "Extracting to data/original/...\n",
-      "Extraction complete.\n",
-      "KG.zip files are located in: c:\\Users\\User\\Documents\\WOA7015 - Advanced ML\\Assignments\\AA\\data\\original\n",
       "Found 3 English KG files. Building graph...\n",
+      "Processing data/KG\\en_disease.csv\n",
+      "Total relations in en_disease.csv: 6648\n",
+      "Processing data/KG\\en_organ.csv\n",
+      "Total relations in en_organ.csv: 843\n",
+      "Processing data/KG\\en_organ_rel.csv\n",
+      "Total relations in en_organ_rel.csv: 309\n",
       "\n",
       "Graph Built Successfully!\n",
-      "Nodes: 1573\n",
-      "Edges: 2216\n",
-      "Vocabulary Built. Vocabulary Size: 878\n",
-      "Vocabulary Built. Vocabulary Size: 484\n",
+      "Nodes: 1892\n",
+      "Edges: 2600\n",
+      "Vocabulary Built. Vocabulary Size: 281\n",
+      "Vocabulary Built. Vocabulary Size: 249\n",
       "Vocabularies saved successfully.\n",
+      "Batch Size: 32\n",
       "Images shape: torch.Size([32, 3, 224, 224])\n",
-      "Questions shape: torch.Size([32, 15])\n",
-      "Answer shape: torch.Size([32, 6])\n",
-      "KG Nodes shape: torch.Size([32, 1])\n"
+      "Questions shape: torch.Size([32, 17])\n",
+      "Answer shape: torch.Size([32, 5])\n",
+      "KG Nodes shape: torch.Size([32, 2])\n",
+      "Question:  Is this a study of the chest?\n",
+      "Tokenized Question:  tensor([  6,  10, 117, 118,  15,  16, 128,  12,   0,   0,   0,   0,   0,   0,\n",
+      "          0,   0,   0])\n",
+      "Answer:  Yes\n",
+      "Tokenized Answer:  tensor([7, 0, 0, 0, 0])\n",
+      "KG Nodes:  tensor([1722,    0])\n"
      ]
     }
    ],
    "source": [
-    "test_pipelines()"
+    "loader, kg, n2i, i2n = test_pipelines(False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d49cf1e",
+   "id": "b3965675",
    "metadata": {},
    "outputs": [],
    "source": []
