Removed some unnecessary functions

--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "1de11da3",
    "metadata": {},
    "outputs": [],
@@ -297,15 +297,7 @@
     "    with open(os.path.join(VOCABS_PATH, 'answer_vocab.json'), 'w') as f:\n",
     "        json.dump({'stoi': ans_vocab.stoi, 'itos': ans_vocab.itos}, f)\n",
     "\n",
-    "    print(\"Vocabularies saved successfully.\")\n",
-    "\n",
-    "# Mapping from node name to index\n",
-    "def create_node_mapping(graph):\n",
-    "    nodes = list(graph.nodes)\n",
-    "    node_to_index = {node: idx + 1 for idx, node in enumerate(nodes)} # Index 0 reserved for padding\n",
-    "    index_to_node = {idx + 1: node for idx, node in enumerate(nodes)}\n",
-    "\n",
-    "    return node_to_index, index_to_node"
+    "    print(\"Vocabularies saved successfully.\")"
    ]
   },
   {
@@ -376,39 +368,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "7a187526",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class SlakeCollate:\n",
-    "    def __init__(self, pad_idx):\n",
-    "        self.pad_idx = pad_idx\n",
-    "\n",
-    "    def __call__(self, batch):\n",
-    "        # Stack images\n",
-    "        images = torch.stack([item['image'] for item in batch])\n",
-    "\n",
-    "        # Pad Questions\n",
-    "        questions = [item['question'] for item in batch]\n",
-    "        padded_questions = pad_sequence(questions, batch_first=True, padding_value=self.pad_idx)\n",
-    "\n",
-    "        # Pad Answers\n",
-    "        answers = [item['answer'] for item in batch]\n",
-    "        answers = pad_sequence(answers, batch_first=True, padding_value=self.pad_idx)\n",
-    "\n",
-    "        return {\n",
-    "            'image': images,\n",
-    "            'question': padded_questions,\n",
-    "            'answer': answers,\n",
-    "            'original_questions': [item['original_question'] for item in batch],\n",
-    "            'original_answers': [item['original_answer'] for item in batch],\n",
-    "            'ids': [item['id'] for item in batch]\n",
-    "        }"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "id": "206a9da5",
    "metadata": {},
@@ -469,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0572f489",
    "metadata": {},
    "outputs": [
@@ -550,8 +509,6 @@
     "\n",
     "# Create train dataset and dataloader\n",
     "train_dataset = SlakeDataset(train_data, question_vocab, answer_vocab, transform=transform)\n",
-    "collate_fn = SlakeCollate(pad_idx=0)\n",
-    "\n",
     "train_loader = DataLoader(\n",
     "    train_dataset, \n",
     "    batch_size=BATCH_SIZE, \n",
