--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "id": "0cf5248b",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "1de11da3",
    "metadata": {},
    "outputs": [],
@@ -280,6 +280,11 @@
     "    \n",
     "    # Answer Vocabulary\n",
     "    ansvocab_builder = VocabularyBuilder(min_freq=1)\n",
+    "\n",
+    "    # Use a dummy tokenizer that just returns the whole lowercased string as one token\n",
+    "    identity_tokenizer = lambda x: [x.lower().strip()]\n",
+    "    ansvocab_builder.tokenize = identity_tokenizer\n",
+    "\n",
     "    ansvocab_builder.build_word_vocabs(answers)\n",
     "\n",
     "    return questvocab_builder, ansvocab_builder\n",
@@ -310,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "id": "c9065769",
    "metadata": {},
    "outputs": [],
@@ -347,7 +352,7 @@
     "        return {\n",
     "            'image': image,\n",
     "            'question' : torch.tensor(question_indices),\n",
-    "            'answer' : torch.tensor(answer_index),\n",
+    "            'answer' : torch.tensor(answer_index, dtype=torch.long),\n",
     "            # Add original items for reference\n",
     "            'original_question': question,\n",
     "            'original_answer': answer,\n",
@@ -368,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 74,
    "id": "206a9da5",
    "metadata": {},
    "outputs": [],
@@ -401,11 +406,10 @@
     "    questions_padded = pad_sequence(questions, batch_first=True, padding_value=pad_index)\n",
     "    # questions_padded: [batch_size, max_len_in_batch]\n",
     "    \n",
-    "    # Stack answers\n",
-    "    # answers = torch.stack(answers)  # [batch_size]\n",
-    "    # Pad Answers\n",
-    "    answers = [item['answer'] for item in batch]\n",
-    "    answers = pad_sequence(answers, batch_first=True, padding_value=pad_index)\n",
+    "    # Handling answers\n",
+    "    # Handling each answer as a single class\n",
+    "    # answers = torch.stack(answers)\n",
+    "    answers = torch.tensor([item['answer'] for item in batch])\n",
     "    \n",
     "    return {\n",
     "        'image': images,\n",
@@ -428,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "0572f489",
    "metadata": {},
    "outputs": [
@@ -436,65 +440,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading dataset from BoKelvin/SLAKE repo\n",
-      "DatasetDict({\n",
-      "    train: Dataset({\n",
-      "        features: ['img_name', 'location', 'answer', 'modality', 'base_type', 'answer_type', 'question', 'qid', 'content_type', 'triple', 'img_id', 'q_lang'],\n",
-      "        num_rows: 4919\n",
-      "    })\n",
-      "    validation: Dataset({\n",
-      "        features: ['img_name', 'location', 'answer', 'modality', 'base_type', 'answer_type', 'question', 'qid', 'content_type', 'triple', 'img_id', 'q_lang'],\n",
-      "        num_rows: 1053\n",
-      "    })\n",
-      "    test: Dataset({\n",
-      "        features: ['img_name', 'location', 'answer', 'modality', 'base_type', 'answer_type', 'question', 'qid', 'content_type', 'triple', 'img_id', 'q_lang'],\n",
-      "        num_rows: 1061\n",
-      "    })\n",
-      "})\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Saving the dataset (1/1 shards): 100%|██████████| 4919/4919 [00:00<00:00, 82219.95 examples/s]\n",
-      "Saving the dataset (1/1 shards): 100%|██████████| 1053/1053 [00:00<00:00, 78756.79 examples/s]\n",
-      "Saving the dataset (1/1 shards): 100%|██████████| 1061/1061 [00:00<00:00, 76936.42 examples/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching file imgs.zip from BoKelvin/SLAKE repo\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "imgs.zip download complete. Cached at: C:\\Users\\User\\.cache\\huggingface\\hub\\datasets--BoKelvin--SLAKE\\snapshots\\a9083ce6c34ac3ffb17671a605962924d8a8f9e9\\imgs.zip\n",
-      "Extracting to data/...\n",
-      "Extraction complete.\n",
-      "imgs.zip files are located in: c:\\Users\\User\\Documents\\WOA7015 - Advanced ML\\Assignments\\AA\\data\n",
       "Vocabulary Built. Vocabulary Size: 281\n",
-      "Vocabulary Built. Vocabulary Size: 249\n"
+      "Vocabulary Built. Vocabulary Size: 225\n"
      ]
     }
    ],
    "source": [
     "# Comment out if dataset is already downloaded\n",
-    "dataset = download_and_store_slake()\n",
+    "# dataset = download_and_store_slake()\n",
     "\n",
     "# Uncomment if dataset is already downloaded\n",
-    "# dataset = load_from_disk(DATASET_PATH)\n",
+    "dataset = load_from_disk(DATASET_PATH)\n",
     "\n",
     "# Build vocabularies for training\n",
     "train_data = dataset['train']\n",
@@ -530,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "id": "23bf0203",
    "metadata": {},
    "outputs": [],
@@ -589,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "id": "8de953de",
    "metadata": {},
    "outputs": [],
@@ -674,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "id": "1273544c",
    "metadata": {},
    "outputs": [],
@@ -749,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 82,
    "id": "dde76e06",
    "metadata": {},
    "outputs": [],
@@ -777,7 +733,7 @@
     "        images = batch['image'].to(device)\n",
     "        questions = batch['question'].to(device)\n",
     "        question_lengths = batch['question_lengths'].to(device)\n",
-    "        answers = batch['answer'][:, 0].to(device)\n",
+    "        answers = batch['answer'].to(device)\n",
     "\n",
     "        # 2. Forward Pass\n",
     "        # Forward pass - now with question_lengths!\n",
@@ -814,21 +770,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 83,
    "id": "fde345d5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\User\\Documents\\WOA7015 - Advanced ML\\Assignments\\AA\\aml_aa\\Lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\User\\Documents\\WOA7015 - Advanced ML\\Assignments\\AA\\aml_aa\\Lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet34_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet34_Weights.DEFAULT` to get the most up-to-date weights.\n",
-      "  warnings.warn(msg)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Testing purpose: Train one epoch\n",
     "model_basic = MedicalVQABaseline(\n",
@@ -850,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 84,
    "id": "0fe03b55",
    "metadata": {},
    "outputs": [
@@ -858,11 +803,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Train: 100%|██████████| 154/154 [00:39<00:00,  3.87it/s, acc=0.435, loss=2.53]\n",
-      "Train: 100%|██████████| 154/154 [00:34<00:00,  4.53it/s, acc=0.478, loss=1.79]\n",
-      "Train: 100%|██████████| 154/154 [00:34<00:00,  4.41it/s, acc=0.478, loss=1.19] \n",
-      "Train: 100%|██████████| 154/154 [00:35<00:00,  4.30it/s, acc=0.609, loss=0.726]\n",
-      "Train: 100%|██████████| 154/154 [00:36<00:00,  4.20it/s, acc=0.696, loss=0.637]\n"
+      "Train: 100%|██████████| 154/154 [00:33<00:00,  4.56it/s, acc=0.304, loss=2.67]\n",
+      "Train: 100%|██████████| 154/154 [00:33<00:00,  4.59it/s, acc=0.522, loss=1.79]\n",
+      "Train: 100%|██████████| 154/154 [00:34<00:00,  4.42it/s, acc=0.478, loss=1.53] \n",
+      "Train: 100%|██████████| 154/154 [00:36<00:00,  4.28it/s, acc=0.609, loss=1.55] \n",
+      "Train: 100%|██████████| 154/154 [00:36<00:00,  4.27it/s, acc=0.652, loss=0.839]\n"
      ]
     }
    ],
@@ -873,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 85,
    "id": "de451fe0",
    "metadata": {},
    "outputs": [],
@@ -893,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 86,
    "id": "7671a090",
    "metadata": {},
    "outputs": [
@@ -901,11 +846,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Train: 100%|██████████| 154/154 [00:34<00:00,  4.46it/s, acc=0.348, loss=2.9] \n",
-      "Train: 100%|██████████| 154/154 [00:36<00:00,  4.21it/s, acc=0.565, loss=1.34] \n",
-      "Train: 100%|██████████| 154/154 [00:37<00:00,  4.08it/s, acc=0.609, loss=1.3]  \n",
-      "Train: 100%|██████████| 154/154 [00:39<00:00,  3.91it/s, acc=0.652, loss=0.704]\n",
-      "Train: 100%|██████████| 154/154 [00:38<00:00,  3.98it/s, acc=0.609, loss=1]    \n"
+      "Train: 100%|██████████| 154/154 [00:34<00:00,  4.42it/s, acc=0.391, loss=2.01] \n",
+      "Train: 100%|██████████| 154/154 [00:38<00:00,  4.04it/s, acc=0.435, loss=1.68]\n",
+      "Train: 100%|██████████| 154/154 [00:37<00:00,  4.08it/s, acc=0.652, loss=1.17] \n",
+      "Train: 100%|██████████| 154/154 [00:37<00:00,  4.11it/s, acc=0.522, loss=1.37] \n",
+      "Train: 100%|██████████| 154/154 [00:38<00:00,  4.05it/s, acc=0.478, loss=1.23] \n"
      ]
     }
    ],
@@ -917,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a06ab99c",
+   "id": "7e02f873",
    "metadata": {},
    "outputs": [],
    "source": []
