--- a/baseline_final.ipynb
+++ b/baseline_final.ipynb
@@ -3168,8 +3168,7 @@
     "    num_classes=len(answer_vocab),\n",
     "    train_dataset=train_dataset,\n",
     "    validation_dataset=validation_dataset,\n",
-    "    n_trials=50,\n",
-    "    basic_model=False\n",
+    "    n_trials=50\n",
     ")\n",
     "\n",
     "# Run tuning\n",
