Added Rouge score

--- a/baseline_final.ipynb
+++ b/baseline_final.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "32082585",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "True"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,6 +59,8 @@
     "from rouge_score import rouge_scorer\n",
     "from bert_score import score as bert_score\n",
     "\n",
+    "# import importlib, utils\n",
+    "# importlib.reload(utils)\n",
     "from utils import plot_training_curves, plot_type_specific_comparison, plot_ngram_analysis, print_all_metrics\n",
     "\n",
     "nltk.download('punkt_tab', quiet=True)\n",
@@ -13728,6 +13730,7 @@
     "    * BLEU: Standard for NLP, captures exact correctness, checks N-gram overlap. Up to 4-grams will be calculated.\n",
     "    * METEOR: Semantic focused, accounts for synonyms\n",
     "    * BERTScore: Checks semantic similarities\n",
+    "    * Rouge: Emphasizes recall\n",
     "    * Exact string matching: Strictly match string outputs\n",
     "3. Answer Type Specific Metrics\n",
     "    * Accuracy, F1 and exact matching for OPEN and CLOSED answer types"
@@ -13735,7 +13738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 81,
    "id": "ebdb1e68",
    "metadata": {},
    "outputs": [],
@@ -13746,7 +13749,7 @@
     "        self.test_dataset = test_dataset\n",
     "        self.answer_vocab = answer_vocab\n",
     "\n",
-    "        self.print_once = True\n",
+    "        self.rouge_scorer = rouge_scorer.RougeScorer(['rouge1', 'rouge2', 'rougeL'], use_stemmer=True)\n",
     "        self.results_dir = Path(FINAL_MODEL_PATH)\n",
     "\n",
     "    def get_predictions(self, batch_size):\n",
@@ -13783,12 +13786,6 @@
     "                                                       batch['id']):\n",
     "                    pred_text = self.answer_vocab.itos.get(pred_idx, '<unk>')\n",
     "                    target_text = self.answer_vocab.itos.get(target_idx, '<unk>')\n",
-    "\n",
-    "                    if self.print_once:\n",
-    "                        print(pred_text)\n",
-    "                        print(target_text)\n",
-    "\n",
-    "                        self.print_once = False\n",
     "                    \n",
     "                    all_predictions.append(pred_idx)\n",
     "                    all_targets.append(target_idx)\n",
@@ -13855,6 +13852,23 @@
     "        }\n",
     "        \n",
     "        return metrics\n",
+    "    \n",
+    "    def calculate_rouge_scores(self, predictions, references):\n",
+    "        rouge1_scores = []\n",
+    "        rouge2_scores = []\n",
+    "        rougeL_scores = []\n",
+    "        \n",
+    "        for pred, ref in zip(predictions, references):\n",
+    "            scores = self.rouge_scorer.score(ref, pred)\n",
+    "            rouge1_scores.append(scores['rouge1'].fmeasure)\n",
+    "            rouge2_scores.append(scores['rouge2'].fmeasure)\n",
+    "            rougeL_scores.append(scores['rougeL'].fmeasure)\n",
+    "        \n",
+    "        return {\n",
+    "            'rouge1': np.mean(rouge1_scores) * 100,\n",
+    "            'rouge2': np.mean(rouge2_scores) * 100,\n",
+    "            'rougeL': np.mean(rougeL_scores) * 100,\n",
+    "        }\n",
     "    \n",
     "    def calculate_meteor_score(self, predictions, references):\n",
     "        meteor_scores = []\n",
@@ -13943,6 +13957,10 @@
     "        # 2. BLEU Scores\n",
     "        print(\"Calculating BLEU (1-4) Scores...\")\n",
     "        metrics['bleu'] = self.calculate_bleu_scores(pred_texts, target_texts)\n",
+    "\n",
+    "        # 3. Rouge Scores\n",
+    "        print(\"Calculating ROUGE Scores...\")\n",
+    "        metrics['rouge'] = self.calculate_rouge_scores(pred_texts, target_texts)\n",
     "        \n",
     "        # 3. METEOR Score\n",
     "        print(\"Calculating METEOR Score...\")\n",
@@ -13991,7 +14009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 82,
    "id": "15633d69",
    "metadata": {},
    "outputs": [
@@ -14011,7 +14029,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14037,7 +14055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 83,
    "id": "cb0323c2",
    "metadata": {},
    "outputs": [],
@@ -14052,7 +14070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 84,
    "id": "09a930c5",
    "metadata": {},
    "outputs": [
@@ -14067,22 +14085,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Getting predictions:   3%|▎         | 2/67 [00:00<00:12,  5.38it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ct\n",
-      "ct\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Getting predictions: 100%|██████████| 67/67 [00:32<00:00,  2.05it/s]\n"
+      "Getting predictions: 100%|██████████| 67/67 [00:58<00:00,  1.14it/s]\n"
      ]
     },
     {
@@ -14092,6 +14095,7 @@
       "\n",
       "Calculating Classification Metrics...\n",
       "Calculating BLEU (1-4) Scores...\n",
+      "Calculating ROUGE Scores...\n",
       "Calculating METEOR Score...\n",
       "Calculating BERTScore... (Might take some time)\n",
       "Calculating Exact Match...\n",
@@ -14111,6 +14115,11 @@
       "  BLEU-2:             35.82%\n",
       "  BLEU-3:             24.57%\n",
       "  BLEU-4:             19.23%\n",
+      "\n",
+      "ROUGE SCORES\n",
+      "  ROUGE-1:            84.42%\n",
+      "  ROUGE-2:            15.89%\n",
+      "  ROUGE-L:            84.08%\n",
       "\n",
       "METEOR SCORE\n",
       "  METEOR:             48.56%\n",
