Added final baseline files

--- a/baseline_final.ipynb
+++ b/baseline_final.ipynb
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "19c65f98",
    "metadata": {},
    "outputs": [],
@@ -609,7 +609,7 @@
     "        attn_out = self.layer_norm(lstm_out + attn_out)\n",
     "        attn_out = self.dropout(attn_out)\n",
     "        \n",
-    "        # Pooling strategy - you can experiment with these:\n",
+    "        # Pooling strategy - experiment with these:\n",
     "        if self.pooling_strategy == 'mean':\n",
     "            question_feature = attn_out.mean(dim=1)  # [B, hidden_dim * 2]\n",
     "        elif self.pooling_strategy == 'max':\n",
@@ -14153,8 +14153,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 86,
+   "id": "1ad3ad8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_loader = DataLoader(\n",
+    "    test_dataset,\n",
+    "    batch_size=best_params['best_params']['batch_size'],\n",
+    "    shuffle=False,\n",
+    "    collate_fn=slake_collate_fn,\n",
+    "    pin_memory=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "1a95618e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch = next(iter(test_loader))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8b7f1a8f",
+   "id": "76ae4cd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_predictions = []\n",
+    "all_targets = []\n",
+    "all_pred_texts = []\n",
+    "all_target_texts = []\n",
+    "all_question_types = []\n",
+    "\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    images = batch['image'].to(device)\n",
+    "    questions = batch['question'].to(device)\n",
+    "    question_lengths = batch['question_lengths'].to(device)\n",
+    "    answers = batch['answer'].to(device)\n",
+    "    \n",
+    "    # Forward pass\n",
+    "    logits = model(images, questions, question_lengths)\n",
+    "    predictions = torch.argmax(logits, dim=1)\n",
+    "    \n",
+    "    # Convert to text\n",
+    "    for pred_idx, target_idx, qid in zip(predictions.cpu().tolist(), \n",
+    "                                            answers.cpu().tolist(), \n",
+    "                                            batch['id']):\n",
+    "        pred_text = answer_vocab.itos.get(pred_idx, '<unk>')\n",
+    "        target_text = answer_vocab.itos.get(target_idx, '<unk>')\n",
+    "        \n",
+    "        all_predictions.append(pred_idx)\n",
+    "        all_targets.append(target_idx)\n",
+    "        all_pred_texts.append(pred_text)\n",
+    "        all_target_texts.append(target_text)\n",
+    "        \n",
+    "        # Get question type\n",
+    "        item = next((x for x in test_dataset.data if x['qid'] == qid), None)\n",
+    "        if item:\n",
+    "            q_type = item.get('answer_type', 'UNKNOWN').upper()\n",
+    "            all_question_types.append(q_type)\n",
+    "        else:\n",
+    "            all_question_types.append('UNKNOWN')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a817744",
    "metadata": {},
    "outputs": [],
    "source": []
